// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CardTable > CardTable.vue > renders OXD CardTable > CardTable 1`] = `
"<div class="oxd-table" role="table">
  <!-- oxd-card-table header start -->
  <!--v-if-->
  <!-- oxd-card-table header end -->
  <!-- oxd-card-table body start -->
  <div data-v-074682e6="" data-v-71ef8840="" class="oxd-table-body oxd-card-table-body" role="rowgroup">
    <div data-v-71ef8840="" class="oxd-table-card --mobile">
      <div data-v-4d6254cf="" data-v-71ef8840="" class="oxd-table-row oxd-table-row--with-border oxd-table-row--clickable" role="row">
        <!--v-if-->
        <div data-v-71ef8840="" class="card-center">
          <!--v-if-->
          <div data-v-71ef8840="" class="card-item card-body-slot">
            <div class="oxd-table-cell" role="cell" style="flex: 1;">
              <div data-v-a4505f24="" class="oxd-table-card-cell">
                <div data-v-a4505f24="" class="header">Column 1</div>
                <div data-v-a4505f24="" class="data">Data 1</div>
              </div>
            </div>
            <div class="oxd-table-cell" role="cell" style="flex: 5;">
              <div data-v-a4505f24="" class="oxd-table-card-cell">
                <div data-v-a4505f24="" class="header">Column 2</div>
                <div data-v-a4505f24="" class="data">Data 2</div>
              </div>
            </div>
          </div>
          <!--v-if-->
        </div>
        <!--v-if-->
      </div>
    </div>
    <div data-v-71ef8840="" class="oxd-table-card --mobile">
      <div data-v-4d6254cf="" data-v-71ef8840="" class="oxd-table-row oxd-table-row--with-border oxd-table-row--clickable" role="row">
        <!--v-if-->
        <div data-v-71ef8840="" class="card-center">
          <!--v-if-->
          <div data-v-71ef8840="" class="card-item card-body-slot">
            <div class="oxd-table-cell" role="cell" style="flex: 1;">
              <div data-v-a4505f24="" class="oxd-table-card-cell">
                <div data-v-a4505f24="" class="header">Column 1</div>
                <div data-v-a4505f24="" class="data">Data 2</div>
              </div>
            </div>
            <div class="oxd-table-cell" role="cell" style="flex: 5;">
              <div data-v-a4505f24="" class="oxd-table-card-cell">
                <div data-v-a4505f24="" class="header">Column 2</div>
                <div data-v-a4505f24="" class="data">Data 2</div>
              </div>
            </div>
          </div>
          <!--v-if-->
        </div>
        <!--v-if-->
      </div>
    </div>
    <div data-v-71ef8840="" class="oxd-table-card --mobile">
      <div data-v-4d6254cf="" data-v-71ef8840="" class="oxd-table-row oxd-table-row--with-border oxd-table-row--clickable" role="row">
        <!--v-if-->
        <div data-v-71ef8840="" class="card-center">
          <!--v-if-->
          <div data-v-71ef8840="" class="card-item card-body-slot">
            <div class="oxd-table-cell" role="cell" style="flex: 1;">
              <div data-v-a4505f24="" class="oxd-table-card-cell">
                <div data-v-a4505f24="" class="header">Column 1</div>
                <div data-v-a4505f24="" class="data">Data 3</div>
              </div>
            </div>
            <div class="oxd-table-cell" role="cell" style="flex: 5;">
              <div data-v-a4505f24="" class="oxd-table-card-cell">
                <div data-v-a4505f24="" class="header">Column 2</div>
                <div data-v-a4505f24="" class="data">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</div>
              </div>
            </div>
          </div>
          <!--v-if-->
        </div>
        <!--v-if-->
      </div>
    </div>
  </div><!-- oxd-card-table body end -->
</div>"
`;

exports[`CardTable > CardTable.vue > should renders OXD CardTable > CardTable with card decorator 1`] = `
"<div class="oxd-table" role="table" rowdecorator="oxd-table-decorator-card">
  <!-- oxd-card-table header start -->
  <!--v-if-->
  <!-- oxd-card-table header end -->
  <!-- oxd-card-table body start -->
  <div data-v-074682e6="" data-v-71ef8840="" class="oxd-table-body oxd-card-table-body" role="rowgroup">
    <div data-v-71ef8840="" class="oxd-table-card --mobile">
      <div data-v-4d6254cf="" data-v-71ef8840="" class="oxd-table-row oxd-table-row--with-border oxd-table-row--clickable" role="row">
        <!--v-if-->
        <div data-v-71ef8840="" class="card-center">
          <!--v-if-->
          <div data-v-71ef8840="" class="card-item card-body-slot">
            <div class="oxd-table-cell" role="cell" style="flex: 1;">
              <div data-v-a4505f24="" class="oxd-table-card-cell">
                <div data-v-a4505f24="" class="header">Column 1</div>
                <div data-v-a4505f24="" class="data">Data 1</div>
              </div>
            </div>
            <div class="oxd-table-cell" role="cell" style="flex: 5;">
              <div data-v-a4505f24="" class="oxd-table-card-cell">
                <div data-v-a4505f24="" class="header">Column 2</div>
                <div data-v-a4505f24="" class="data">Data 2</div>
              </div>
            </div>
          </div>
          <!--v-if-->
        </div>
        <!--v-if-->
      </div>
    </div>
    <div data-v-71ef8840="" class="oxd-table-card --mobile">
      <div data-v-4d6254cf="" data-v-71ef8840="" class="oxd-table-row oxd-table-row--with-border oxd-table-row--clickable" role="row">
        <!--v-if-->
        <div data-v-71ef8840="" class="card-center">
          <!--v-if-->
          <div data-v-71ef8840="" class="card-item card-body-slot">
            <div class="oxd-table-cell" role="cell" style="flex: 1;">
              <div data-v-a4505f24="" class="oxd-table-card-cell">
                <div data-v-a4505f24="" class="header">Column 1</div>
                <div data-v-a4505f24="" class="data">Data 2</div>
              </div>
            </div>
            <div class="oxd-table-cell" role="cell" style="flex: 5;">
              <div data-v-a4505f24="" class="oxd-table-card-cell">
                <div data-v-a4505f24="" class="header">Column 2</div>
                <div data-v-a4505f24="" class="data">Data 2</div>
              </div>
            </div>
          </div>
          <!--v-if-->
        </div>
        <!--v-if-->
      </div>
    </div>
    <div data-v-71ef8840="" class="oxd-table-card --mobile">
      <div data-v-4d6254cf="" data-v-71ef8840="" class="oxd-table-row oxd-table-row--with-border oxd-table-row--clickable" role="row">
        <!--v-if-->
        <div data-v-71ef8840="" class="card-center">
          <!--v-if-->
          <div data-v-71ef8840="" class="card-item card-body-slot">
            <div class="oxd-table-cell" role="cell" style="flex: 1;">
              <div data-v-a4505f24="" class="oxd-table-card-cell">
                <div data-v-a4505f24="" class="header">Column 1</div>
                <div data-v-a4505f24="" class="data">Data 3</div>
              </div>
            </div>
            <div class="oxd-table-cell" role="cell" style="flex: 5;">
              <div data-v-a4505f24="" class="oxd-table-card-cell">
                <div data-v-a4505f24="" class="header">Column 2</div>
                <div data-v-a4505f24="" class="data">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</div>
              </div>
            </div>
          </div>
          <!--v-if-->
        </div>
        <!--v-if-->
      </div>
    </div>
  </div><!-- oxd-card-table body end -->
</div>"
`;

exports[`CardTable > CardTable.vue > should renders OXD CardTable > CardTable with selector config 1`] = `
"<div class="oxd-table" role="table" rowdecorator="oxd-table-decorator-card">
  <!-- oxd-card-table header start -->
  <!--v-if-->
  <!-- oxd-card-table header end -->
  <!-- oxd-card-table body start -->
  <div data-v-074682e6="" data-v-71ef8840="" class="oxd-table-body oxd-card-table-body" role="rowgroup">
    <div data-v-71ef8840="" class="oxd-table-card --mobile">
      <div data-v-4d6254cf="" data-v-71ef8840="" class="oxd-table-row oxd-table-row--with-border oxd-table-row--clickable" role="row">
        <!--v-if-->
        <div data-v-71ef8840="" class="card-center">
          <!--v-if-->
          <div data-v-71ef8840="" class="card-item card-body-slot">
            <div class="oxd-table-cell" role="cell" style="flex: 1;">
              <div data-v-a4505f24="" class="oxd-table-card-cell">
                <div data-v-a4505f24="" class="header">Column 1</div>
                <div data-v-a4505f24="" class="data">Data 1</div>
              </div>
            </div>
            <div class="oxd-table-cell" role="cell" style="flex: 5;">
              <div data-v-a4505f24="" class="oxd-table-card-cell">
                <div data-v-a4505f24="" class="header">Column 2</div>
                <div data-v-a4505f24="" class="data">Data 2</div>
              </div>
            </div>
          </div>
          <!--v-if-->
        </div>
        <!--v-if-->
      </div>
    </div>
    <div data-v-71ef8840="" class="oxd-table-card --mobile">
      <div data-v-4d6254cf="" data-v-71ef8840="" class="oxd-table-row oxd-table-row--with-border oxd-table-row--clickable" role="row">
        <!--v-if-->
        <div data-v-71ef8840="" class="card-center">
          <!--v-if-->
          <div data-v-71ef8840="" class="card-item card-body-slot">
            <div class="oxd-table-cell" role="cell" style="flex: 1;">
              <div data-v-a4505f24="" class="oxd-table-card-cell">
                <div data-v-a4505f24="" class="header">Column 1</div>
                <div data-v-a4505f24="" class="data">Data 2</div>
              </div>
            </div>
            <div class="oxd-table-cell" role="cell" style="flex: 5;">
              <div data-v-a4505f24="" class="oxd-table-card-cell">
                <div data-v-a4505f24="" class="header">Column 2</div>
                <div data-v-a4505f24="" class="data">Data 2</div>
              </div>
            </div>
          </div>
          <!--v-if-->
        </div>
        <!--v-if-->
      </div>
    </div>
    <div data-v-71ef8840="" class="oxd-table-card --mobile">
      <div data-v-4d6254cf="" data-v-71ef8840="" class="oxd-table-row oxd-table-row--with-border oxd-table-row--clickable" role="row">
        <!--v-if-->
        <div data-v-71ef8840="" class="card-center">
          <!--v-if-->
          <div data-v-71ef8840="" class="card-item card-body-slot">
            <div class="oxd-table-cell" role="cell" style="flex: 1;">
              <div data-v-a4505f24="" class="oxd-table-card-cell">
                <div data-v-a4505f24="" class="header">Column 1</div>
                <div data-v-a4505f24="" class="data">Data 3</div>
              </div>
            </div>
            <div class="oxd-table-cell" role="cell" style="flex: 5;">
              <div data-v-a4505f24="" class="oxd-table-card-cell">
                <div data-v-a4505f24="" class="header">Column 2</div>
                <div data-v-a4505f24="" class="data">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</div>
              </div>
            </div>
          </div>
          <!--v-if-->
        </div>
        <!--v-if-->
      </div>
    </div>
  </div><!-- oxd-card-table body end -->
</div>"
`;

exports[`CardTable > CardTable.vue > should renders OXD CardTable > CardTable without selectable 1`] = `
"<div class="oxd-table" role="table">
  <!-- oxd-card-table header start -->
  <!--v-if-->
  <!-- oxd-card-table header end -->
  <!-- oxd-card-table body start -->
  <div data-v-074682e6="" data-v-71ef8840="" class="oxd-table-body oxd-card-table-body" role="rowgroup">
    <div data-v-71ef8840="" class="oxd-table-card --mobile">
      <div data-v-4d6254cf="" data-v-71ef8840="" class="oxd-table-row oxd-table-row--with-border oxd-table-row--clickable" role="row">
        <!--v-if-->
        <div data-v-71ef8840="" class="card-center">
          <!--v-if-->
          <div data-v-71ef8840="" class="card-item card-body-slot">
            <div class="oxd-table-cell" role="cell" style="flex: 1;">
              <div data-v-a4505f24="" class="oxd-table-card-cell">
                <div data-v-a4505f24="" class="header">Column 1</div>
                <div data-v-a4505f24="" class="data">Data 1</div>
              </div>
            </div>
            <div class="oxd-table-cell" role="cell" style="flex: 5;">
              <div data-v-a4505f24="" class="oxd-table-card-cell">
                <div data-v-a4505f24="" class="header">Column 2</div>
                <div data-v-a4505f24="" class="data">Data 2</div>
              </div>
            </div>
          </div>
          <!--v-if-->
        </div>
        <!--v-if-->
      </div>
    </div>
    <div data-v-71ef8840="" class="oxd-table-card --mobile">
      <div data-v-4d6254cf="" data-v-71ef8840="" class="oxd-table-row oxd-table-row--with-border oxd-table-row--clickable" role="row">
        <!--v-if-->
        <div data-v-71ef8840="" class="card-center">
          <!--v-if-->
          <div data-v-71ef8840="" class="card-item card-body-slot">
            <div class="oxd-table-cell" role="cell" style="flex: 1;">
              <div data-v-a4505f24="" class="oxd-table-card-cell">
                <div data-v-a4505f24="" class="header">Column 1</div>
                <div data-v-a4505f24="" class="data">Data 2</div>
              </div>
            </div>
            <div class="oxd-table-cell" role="cell" style="flex: 5;">
              <div data-v-a4505f24="" class="oxd-table-card-cell">
                <div data-v-a4505f24="" class="header">Column 2</div>
                <div data-v-a4505f24="" class="data">Data 2</div>
              </div>
            </div>
          </div>
          <!--v-if-->
        </div>
        <!--v-if-->
      </div>
    </div>
    <div data-v-71ef8840="" class="oxd-table-card --mobile">
      <div data-v-4d6254cf="" data-v-71ef8840="" class="oxd-table-row oxd-table-row--with-border oxd-table-row--clickable" role="row">
        <!--v-if-->
        <div data-v-71ef8840="" class="card-center">
          <!--v-if-->
          <div data-v-71ef8840="" class="card-item card-body-slot">
            <div class="oxd-table-cell" role="cell" style="flex: 1;">
              <div data-v-a4505f24="" class="oxd-table-card-cell">
                <div data-v-a4505f24="" class="header">Column 1</div>
                <div data-v-a4505f24="" class="data">Data 3</div>
              </div>
            </div>
            <div class="oxd-table-cell" role="cell" style="flex: 5;">
              <div data-v-a4505f24="" class="oxd-table-card-cell">
                <div data-v-a4505f24="" class="header">Column 2</div>
                <div data-v-a4505f24="" class="data">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</div>
              </div>
            </div>
          </div>
          <!--v-if-->
        </div>
        <!--v-if-->
      </div>
    </div>
  </div><!-- oxd-card-table body end -->
</div>"
`;
